# Reward-Shaping-for-Job-Shop-Scheduling

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.cfg
src/jsp_experiments/: PATHS.py  cost_estimator.py  dowload_jsp_instances.py  instance_loader.py  mac_mps_torch_checker.py  merge_default_and_sweep_config.py  nasuta_rllib_example.py  tassel_rllib_example.py  tassel_sb3_example.py
src/jsp_experiments/examples/: nasuta_rllib_example.py  nasuta_sb3_example.py  nasuta_sb3_wandb_example.py  tassel_rllib_example.py  tassel_sb3_example.py
src/jsp_experiments/graph_jsp/: example_graph_jsp_env_nasuta_tuning.py  example_graph_jsp_env_samsonov_tuning.py  example_graph_jsp_env_tassel_ta41_tuning.py  example_graph_jsp_env_zhang_ft06_tuning.py  example_nasuta_wrapper.sh  example_samsonov_wrapper.sh  example_tassel_wrapper.sh  example_zhang_wrapper.sh  graph_jsp_callback.py  graph_jsp_env_nasuta_ta41_tuning.py  graph_jsp_env_samsonov_ta41_tuning.py  graph_jsp_env_tassel_ta41_tuning.py  graph_jsp_env_zhang_ta41_tuning.py  graph_jsp_sweep_generator.py  nasuta_wrapper.sh  perform_sweep_run.py  readme.md  samsonov_wrapper.sh  tassel_wrapper.sh  zhang_wrapper.sh
src/jsp_experiments/graph_jsp/10x10/: orb04_graph-tassel_ls_graph_jsp_env_tuning.py  orb04_nasuta_ls_graph_jsp_env_tuning.py  (+15 more)
src/jsp_experiments/or_tools/: or_tools_ta41.py
src/jsp_experiments/tassel_jsp_env/: tassel_jsp_callback.py  tassel_jsp_env_wrapper.py  tassel_jsp_ft06_tuning.py  tassel_jsp_orb04_tuning.py  tassel_jsp_ta01_tuning.py  tassel_jsp_ta41_tuning.py  tassel_jsp_ta_instance_sweep.py
(+34 files in other folders)
